[package]
name = "slab_allocator_rs"
version = "1.0.0"
authors = ["axriosn <axriosn@gmail.com>"]
license = "MIT"
edition = "2021"

description = "Slab allocator for no_std systems. Uses multiple slabs with blocks of different sizes and a buddy system allocator for blocks larger than 4096 bytes. Updated to latest nightly rust"
keywords = ["slab", "allocator", "no_std", "heap", "kernel"]
categories = ["no-std", "memory-management"]

repository = "https://github.com/arioz0330/slab_allocator"
readme = "README.md"

[dependencies]
buddy_system_allocator = "0.8.0"
spin = "0.9.2"
